# cdi-grading-tool

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CDI.py  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  README_TESTING.md  TESTING.md  constants.py  example.py  main.py  mypy.ini  nfpm.yaml  prd.md  pyproject.toml  requirements.txt  ui.py  ui.ui
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tests.yml
classes/: configuration.py  devices.py  exceptions.py  helpers.py  threads.py  tools.py  widgets.py
config/: configuration.ini  eula.html
dashboard/: .env.example  README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(console)/: layout.tsx
dashboard/app/(console)/drive-health/: page.tsx
dashboard/app/(console)/reports/: page.tsx
dashboard/app/(console)/self-test/: page.tsx
dashboard/app/(console)/settings/: page.tsx
dashboard/app/(console)/summary/: page.tsx
dashboard/app/api/cdi/[...path]/: route.ts
dashboard/components/: dashboard-page.tsx  dashboard-provider.tsx  dashboard-shell.tsx  navigation.ts
dashboard/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
dashboard/components/views/: drive-health-view.tsx  reports-view.tsx  self-test-view.tsx  settings-view.tsx  summary-view.tsx
dashboard/lib/: api.ts  drive.ts
deploy/sudoers/: cdi-health-technician
deploy/systemd/: cdi-health-api.env.example  cdi-health-api.service  cdi-health-dashboard.env.example  cdi-health-dashboard.service
docs/: CDI_HEALTH_SPEC.md  DASHBOARD_API.md  Datacenter NVMe SSD Specification v2.7 Final.md  TECHNICIAN_DEPLOYMENT.md  cdi_brand_palette.md
samples/: sample-cdi-dashboard.html
scripts/: collect_real_drives.py  start-local-mock.sh
src/cdi_health/: __init__.py  __main__.py  cli.py  constants.py  logger.py  main.py
src/cdi_health/api/: __init__.py  __main__.py  app.py  jobs.py  schemas.py  security.py  server.py  services.py
src/cdi_health/assets/: __init__.py  cdi_brand_palette.css
src/cdi_health/classes/: colors.py  config.py  configuration.py  devices.py  exceptions.py  formatter.py  helpers.py  mock.py  mock_export.py  nvme_selftest.py  reporter.py  scoring.py  selftest_formatter.py  tools.py  validation.py  watch.py
src/cdi_health/config/: thresholds.yaml
src/cdi_health/core/: __init__.py  device_manager.py  grading_engine.py  report_generator.py
src/cdi_health/examples/: example.py
src/cdi_health/mock_data/: __init__.py
src/cdi_health/mock_data/ata/: MK000960GWSSD_healthy.json  SDSSDH3_512G_1_healthy.json  SDSSDH3_512G_healthy.json  failing_smart.json  healthy_hdd.json  high_pending.json  high_reallocated.json  high_uncorrectable.json
src/cdi_health/mock_data/nvme/: FADU_DELTA_U_2_1_92TB_healthy.json  KCD81VUG6T40_4_healthy.json  KCD81VUG6T40_healthy.json  KCM61VUL3T20_healthy.json  KIOXIA_KCD81VUG6T40_healthy.json  SSDPE2KE032T8_3_healthy.json  SSDPE2KE032T8_healthy.json  SSDPEK1A118GA_2_healthy.json  SSDPEK1A118GA_healthy.json  SSDPF21Q800GB_healthy.json  failing_smart.json  healthy_ssd.json
src/cdi_health/mock_data/scan_results/: empty.json  mixed_devices.json  single_ata.json
src/cdi_health/mock_data/scsi/: healthy_sas.json  high_grown_defects.json
src/cdi_health/utils/: __init__.py  logging.py
src/packagenamehere/: __main__.py  constants.py  main.py
src/packagenamehere/classes/: configuration.py  devices.py  tools.py
temp/: 192.168.211.101_BTAX24220H3M7P6DGN_1773018852.json  build_dashboard.py  nvme_smart_logs.yml
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_colors.py  test_constants.py  test_formatter.py  test_integration.py  test_logger.py  test_mock_export.py  test_nvme_selftest.py  test_reporter.py  test_scoring.py  test_selftest_formatter.py  test_tools.py
