[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdi_health"
description = "Open Source Storage Device Grading Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
    {name = "Circular Drive Initiative"}
]

maintainers = [
    {name = "Circular Drive Initiative", email = "jm@circulardrives.org"},
    {name = "Nick Hayhurst", email = "nick.hayhurst@interactdc.com"},
    {name = "Jonmichael Hands", email = "jmhands@chia.net"},
]

keywords = [
    "drive",
    "disk",
    "hdd",
    "ssd",
    "cdi",
    "circular drive initiative",
    "grading",
    "health",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
]

dynamic = ["version"]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "licenseheaders",
    "pre-commit",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "types-pyyaml",
]

[project.urls]
Repository = "https://github.com/circulardrives/cdi-grading-tool"
Documentation = "https://github.com/circulardrives/cdi-grading-tool#readme"
Issues = "https://github.com/circulardrives/cdi-grading-tool/issues"

[project.scripts]
"cdi-health" = "cdi_health.__main__:main"
"cdi-health-api" = "cdi_health.api.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cdi_health.mock_data" = ["**/*.json"]
"cdi_health.config" = ["*.yaml"]
"cdi_health.assets" = ["*.css", "*.svg"]

[tool.setuptools_scm]
write_to = "src/cdi_health/_version.py"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (for interface compatibility)
    "ARG002", # unused method argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["cdi_health"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cdi_health",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/cdi_health"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
